syntax = "proto3";

package proto;

import "chambre.proto";

message Reservation {
  int64 idReservation = 1;
  int64 idHotel = 2;
  repeated Chambre chambresReservees = 3;
  int64 idClientPrincipal = 4;
  string dateArrivee = 5;
  string dateDepart = 6;
  int32 nombrePersonnes = 7;
  double montantReservation = 8;
  bool petitDejeuner = 9;
}
